[gd_scene load_steps=8 format=3 uid="uid://c8l5gtvgtoyds"]

[ext_resource type="Script" path="res://scripts/lvl_w.gd" id="1_vuobc"]
[ext_resource type="Texture2D" uid="uid://wuxnit27f6fb" path="res://assets/nuke.png" id="2_5pflm"]
[ext_resource type="PackedScene" uid="uid://bf4xs6pkjn5e5" path="res://scenes/final_btn.tscn" id="3_b8mij"]
[ext_resource type="AudioStream" uid="uid://djg88fxpanl1m" path="res://assets/sounds/rumble3.ogg" id="4_3tqhx"]

[sub_resource type="Animation" id="Animation_e7ss0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Nuke:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Nuke:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Title_tm:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterContainer/msgVBoxContainer/msg1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CenterContainer/msgVBoxContainer/msg2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CenterContainer/msgVBoxContainer:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CenterContainer/DialogVBoxContainer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:allow_input")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_om7bf"]
resource_name = "win_animation"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Nuke:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 6, 11.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.164706), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Nuke:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.2, 6, 11.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.9, 0.9), Vector2(1.2, 1.2), Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Title_tm:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterContainer/msgVBoxContainer/msg1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 7, 10, 19, 19.8667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CenterContainer/msgVBoxContainer/msg2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 11, 14, 19, 19.8667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CenterContainer/msgVBoxContainer:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(19.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CenterContainer/DialogVBoxContainer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 19.8667, 20),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:allow_input")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 19.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_65jla"]
_data = {
"RESET": SubResource("Animation_e7ss0"),
"win_animation": SubResource("Animation_om7bf")
}

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vuobc")

[node name="Nuke" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -738.0
offset_right = 400.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(400, 740)
texture = ExtResource("2_5pflm")
stretch_mode = 3

[node name="NukeAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_65jla")
}
autoplay = "win_animation"

[node name="Title" type="Label" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_top = 25.0
offset_right = 76.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 60
text = "TITLE"
horizontal_alignment = 1

[node name="Title_tm" type="Label" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 42.0
offset_right = 728.0
offset_bottom = 56.0
grow_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "GAME_TITLE_TM"

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(825, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="msgVBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(825, 0)
layout_mode = 2

[node name="msg1" type="Label" parent="CenterContainer/msgVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "END_MSG_1"
horizontal_alignment = 1

[node name="msg2" type="Label" parent="CenterContainer/msgVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "END_MSG_2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogVBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(825, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/DialogVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "END_Q"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/DialogVBoxContainer"]
custom_minimum_size = Vector2(50, 60)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/DialogVBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Yes" parent="CenterContainer/DialogVBoxContainer/HBoxContainer/MarginContainer" instance=ExtResource("3_b8mij")]
layout_mode = 2
text = "END_YES"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/DialogVBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="No" parent="CenterContainer/DialogVBoxContainer/HBoxContainer/MarginContainer2" instance=ExtResource("3_b8mij")]
layout_mode = 2
text = "END_NO"

[node name="LabelWin" type="Label" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "END_WIN"

[node name="LabelLose" type="Label" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "END_LOSE"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3tqhx")
volume_db = -11.0
bus = &"SFX"

[connection signal="pressed" from="CenterContainer/DialogVBoxContainer/HBoxContainer/MarginContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="CenterContainer/DialogVBoxContainer/HBoxContainer/MarginContainer2/No" to="." method="_on_no_pressed"]
